Updates timestamp in song controls.

--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelSongListPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelSongListPage.xaml
@@ -78,7 +78,7 @@
                                    Style="{StaticResource ListNormalTextStyle}"
                                 />
 
-                            <Label Text="{Binding PublishDate.RelativeDateString, Mode=OneTime}"
+                            <Label Text="{Binding PublishDate.RelativeDateAndTimeString, Mode=OneTime}"
                                    Grid.Row="3"
                                    TextColor="{StaticResource InactiveProgramColorDark}"
                                    Style="{StaticResource ListNormalTextStyle}"
