Updates song item content.

--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelSongListPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelSongListPage.xaml
@@ -49,12 +49,16 @@
                 IsVisible="{Binding HasData}"
                 Grid.Row="1"
             >
-            <CollectionView ItemsSource="{Binding Items}">
+            <CollectionView ItemsSource="{Binding GroupedItems}" IsGrouped="True">
+                <CollectionView.GroupHeaderTemplate>
+                    <DataTemplate>
+                        <views:GroupHeaderControl />
+                    </DataTemplate>
+                </CollectionView.GroupHeaderTemplate>
                 <CollectionView.ItemTemplate>
                     <DataTemplate x:DataType="m:SongModel">
-                        <Grid Padding="{OnPlatform WinUI='8,6,16,6', Default='16,6,16,6'}" HeightRequest="80" CompressedLayout.IsHeadless="True">
+                        <Grid Padding="{OnPlatform WinUI='8,6,16,6', Default='16,6,16,6'}" HeightRequest="64" CompressedLayout.IsHeadless="True">
                             <Grid.RowDefinitions>
-                                <RowDefinition Height="auto" />
                                 <RowDefinition Height="auto" />
                                 <RowDefinition Height="auto" />
                                 <RowDefinition Height="auto" />
@@ -72,14 +76,8 @@
                                    Style="{StaticResource ListNormalTextStyle}"
                                 />
 
-                            <Label Text="{Binding Composer, Mode=OneTime}"
-                                   Grid.Row="2"
-                                   TextColor="{StaticResource InactiveProgramColorDark}"
-                                   Style="{StaticResource ListNormalTextStyle}"
-                                />
-
                             <Label Text="{Binding PublishDate.RelativeDateAndTimeString, Mode=OneTime}"
-                                   Grid.Row="3"
+                                   Grid.Row="2"
                                    TextColor="{StaticResource InactiveProgramColorDark}"
                                    Style="{StaticResource ListNormalTextStyle}"
                                 />
