--- a/Source/Pekspro.RadioStorm.MAUI/AppShell.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/AppShell.xaml
@@ -16,6 +16,7 @@
     FlyoutWidth="{OnIdiom Phone=198, Default={OnPlatform WinUI=48, Default=56}}"
     FlyoutBackgroundColor="{AppThemeBinding Dark={StaticResource PanelBackgroundDark}, Light={StaticResource PanelBackgroundLight}}"
     FlyoutBehavior="{OnIdiom Phone=Flyout, Default=Locked}"
+    Title="RadioStorm"
     >
     <Shell.Resources>
         <ControlTemplate x:Key="MenuItemTemplate">
