--- a/Source/Pekspro.RadioStorm.MAUI/Resources/Styles/Styles.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Resources/Styles/Styles.xaml
@@ -30,7 +30,7 @@
     </Style>
 
     <Style TargetType="BoxView">
-        <Setter Property="Color" Value="{AppThemeBinding Light={StaticResource Gray950}, Dark={StaticResource Gray200}}" />
+        <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Gray950}, Dark={StaticResource Gray200}}" />
     </Style>
 
     <Style TargetType="Button">
@@ -41,6 +41,7 @@
         <!-- Changed: <Setter Property="FontFamily" Value="OpenSansRegular" /> -->
         <Setter Property="FontFamily" Value="{StaticResource DefaultFont}" />
         <Setter Property="FontSize" Value="14"/>
+        <Setter Property="BorderWidth" Value="0"/>
         <!--Changed: <Setter Property="CornerRadius" Value="8"/>-->
         <Setter Property="CornerRadius" Value="0"/>
         <Setter Property="Padding" Value="14,10"/>
@@ -57,6 +58,7 @@
                             <Setter Property="BackgroundColor" Value="{AppThemeBinding Light={StaticResource Gray200}, Dark={StaticResource Gray900}}" />
                         </VisualState.Setters>
                     </VisualState>
+                    <VisualState x:Name="PointerOver" />
                 </VisualStateGroup>
             </VisualStateGroupList>
         </Setter>
@@ -170,6 +172,7 @@
                             <Setter Property="Opacity" Value="0.5" />
                         </VisualState.Setters>
                     </VisualState>
+                    <VisualState x:Name="PointerOver" />
                 </VisualStateGroup>
             </VisualStateGroupList>
         </Setter>
