--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Settings/SettingsPage.xaml
@@ -67,6 +67,7 @@
                 <Label Text="{x:Static r:Strings.Settings_Theme_Description}" />
 
                 <Picker ItemsSource="{Binding ThemeTypes}"
+                        SelectedIndexChanged="ThemePicker_SelectedIndexChanged"
                         SelectedIndex="{Binding ThemeIndex, Mode=TwoWay}"
                         Margin="{OnPlatform Default='0', WinUI='0,0,0,12'}"
                         />
