--- a/Source/Pekspro.RadioStorm.MAUI/AppShell.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/AppShell.xaml
@@ -13,6 +13,7 @@
     xmlns:recent="clr-namespace:Pekspro.RadioStorm.MAUI.Pages.Recent"
     xmlns:player="clr-namespace:Pekspro.RadioStorm.MAUI.Pages.Player"
     xmlns:setting="clr-namespace:Pekspro.RadioStorm.MAUI.Pages.Settings"
+    x:DataType='local:AppShell'
     FlyoutWidth="{OnIdiom Phone=198, Default={OnPlatform WinUI=48, Default=56}}"
     FlyoutBackgroundColor="{AppThemeBinding Dark={StaticResource PanelBackgroundDark}, Light={StaticResource PanelBackgroundLight}}"
     FlyoutBehavior="{OnIdiom Phone=Flyout, Default=Locked}"
@@ -70,7 +71,7 @@
     <!--FlyoutBackgroundColor="#1E1E1E" -->
 
     <Shell.FlyoutContentTemplate>
-        <DataTemplate>
+        <DataTemplate x:DataType='local:AppShell'>
             <Grid RowDefinitions="{OnPlatform WinUI='48,48,48,48,48,*,48', Default='56,56,56,56,56,*,56'}"
                   BackgroundColor="{AppThemeBinding Dark={StaticResource PanelBackgroundDark}, Light={StaticResource PanelBackgroundLight}}"
                   RadioButtonGroup.GroupName="Menu"
