--- a/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelAlbumControl.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Pages/Channel/ChannelAlbumControl.xaml
@@ -9,8 +9,8 @@
              >
 
     <Border Style="{StaticResource AlbumCard}" 
-            WidthRequest="{Binding Source={RelativeSource AncestorType={x:Type favvm:FavoritesViewModel}}, Path=AlbumCardWidth}"
-            HeightRequest="{Binding Source={RelativeSource AncestorType={x:Type favvm:FavoritesViewModel}}, Path=AlbumCardHeight}"
+            WidthRequest="{Binding Source={RelativeSource AncestorType={x:Type favvm:FavoritesViewModel}}, Path=AlbumCardWidth, x:DataType=favvm:FavoritesViewModel}"
+            HeightRequest="{Binding Source={RelativeSource AncestorType={x:Type favvm:FavoritesViewModel}}, Path=AlbumCardHeight, x:DataType=favvm:FavoritesViewModel}"
             >
         <Grid Style="{StaticResource AlbumItem}" CompressedLayout.IsHeadless="True">
             <Label  Grid.Row="0"
