--- a/Source/Pekspro.RadioStorm.MAUI/Views/ChannelProgressBar.xaml
+++ b/Source/Pekspro.RadioStorm.MAUI/Views/ChannelProgressBar.xaml
@@ -24,7 +24,7 @@
                         <Rectangle.WidthRequest>
                             <MultiBinding Converter="{StaticResource MultiplierConverter}">
                                 <Binding Path="Status.CurrentProgressRatio" />
-                                <Binding Path="Width" Source="{x:Reference GridProgress}" />
+                                <Binding Path="Width" Source="{x:Reference GridProgress}" x:DataType="Grid" />
                             </MultiBinding>
                         </Rectangle.WidthRequest>
                     </Rectangle>
